--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       window.addEventListener('load', onVrViewLoad)
       function onVrViewLoad() {
          var vrView = new VRView.Player('#vrview', {
-         image: 'images/coral.jpg',
+         image: 'https://i.imgur.com/kjqt9lr.jpg',
          is_stereo: true,
          width: '100%',
          height: 500
