--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <iframe width="480" height="390" allowfullscreen style="border-style:none;" src="192.168.1.4:8080/pannellum/src/standalone/pannellum.htm?panorama=192.168.1.4:8080/pannellum/examplepano.jpg&amp;title=Jordan%20Pond&amp;author=Matthew%20Petroff&amp;preview=192.168.1.4:8080/pannellum/examplepano-preview.jpg"></iframe>
+    <iframe width="480" height="390" allowfullscreen style="border-style:none;" src="../src/standalone/pannellum.htm?panorama=../examplepano.jpg&amp;title=Jordan%20Pond&amp;author=Matthew%20Petroff&amp;preview=../examplepano-preview.jpg"></iframe>
 </body>
 </html>
 
